<resources>
    <string name="app_name">够不购</string>
    <string name="home">首页</string>
    <string name="together">一起买</string>
    <string name="grab">九点抢</string>
    <string name="self">我的</string>
    <string name="I_started_to_buy_together">我发起的一起买</string>
    <string name="current_assets">当前资产</string>
    <string name="today">今日</string>
    <string name="current">当前</string>
    <string name="join">加入</string>
    <string name="obtain">获得</string>
    <string name="participate">参与</string>
    <string name="friends">好友</string>
    <string name="ranking">排名</string>
    <string name="qr_code">扫一扫</string>
    <string name="shopping_cart">购物车</string>
    <string name="news">消息</string>
    <string name="product_collection">商品收藏</string>
    <string name="shop_favorites">店铺收藏</string>
    <string name="history">浏览记录</string>
    <string name="my_order">我的订单</string>
    <string name="view_all">查看全部</string>
    <string name="pending_payment">待付款</string>
    <string name="to_be_used">待使用</string>
    <string name="to_be_evaluated">待评价</string>
    <string name="return_of_goods">退货</string>
    <string name="my_bean_coins">我的豆币</string>
    <string name="my_ticket">我的票券</string>
    <string name="my_good_friend">我的好友</string>
    <string name="recommend_feedback">意见反馈</string>
    <string name="setting">设置</string>
    <string name="business_background">商家后台</string>
    <string name="login_or_register">登陆/注册</string>
    <string name="login">登陆</string>
    <string name="account">账号</string>
    <string name="hint_account">用户名/邮箱/手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="password">密码</string>
    <string name="register_an_account">注册账号</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="mobile_number">手机号</string>
    <string name="security_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="register">注册</string>
    <string name="next">下一步</string>
    <string name="user_agreement">同意够不购《用户使用协议》</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="change_password">修改密码</string>
    <string name="new_password_successfully">新密码设置成功</string>
    <string name="remember_password_to_log_in_again">请牢记您设置的密码\n请重新登录</string>
    <string name="category">分类</string>
    <string name="food">美食</string>
    <string name="leisure_and_entertainment">休闲娱乐</string>
    <string name="domestic_services">生活服务</string>
    <string name="shopping">购物</string>
    <string name="urban_beauty">都市丽人</string>
    <string name="all_categories">全部分类</string>
    <string name="sales">销量</string>
    <string name="price">价格</string>
    <string name="distance">距离</string>
    <string name="personal_information">个人信息</string>
    <string name="account_security">账户与安全</string>
    <string name="common">通用</string>
    <string name="about">关于</string>
    <string name="exit_account">退出账号</string>
    <string name="original_price">原价</string>
    <string name="current_city">当前城市:</string>
    <string name="switching">切换</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="shipping_address">收货地址</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="save">保存</string>
    <string name="bound_phone">绑定手机</string>
    <string name="determine">确定</string>
    <string name="congratulations_cellphone_success">恭喜你,手机绑定成功!</string>
    <string name="photograph">拍照</string>
    <string name="gallery">相册</string>
    <string name="nickname_description">以英文字母或者汉字开头,限4&#8211;16个字符,一个汉字为两个字符\n此昵称非会员登录名,仅在一起买、好友等场景显示</string>
    <string name="new_address">新建地址</string>
    <string name="delete">删除</string>
    <string name="default_address">默认地址</string>
    <string name="edit">编辑</string>
    <string name="consignee">收货人</string>
    <string name="area">所在地区</string>
    <string name="detailed_address">详细地址</string>
    <string name="check_all">全选</string>
    <string name="total">总计</string>
    <string name="excluding_freight">不含运费</string>
    <string name="settlement">结算</string>
    <string name="complete">完成</string>
    <string name="cancel">取消</string>

</resources>
