<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="12dp"
        android:src="@color/gray_light"/>

    <com.admin.app.view.ItemView
        android:id="@+id/setting_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_icon="@mipmap/icon_info"
        app:item_left_text="@string/personal_information"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:src="@color/gray_light"/>

    <com.admin.app.view.ItemView
        android:id="@+id/setting_safety"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_icon="@mipmap/icon_safety"
        app:item_left_text="@string/account_security"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:src="@color/gray_light"/>

    <com.admin.app.view.ItemView
        android:id="@+id/setting_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_icon="@mipmap/icon_news_blue"
        app:item_left_text="@string/news"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:src="@color/gray_light"/>

    <com.admin.app.view.ItemView
        android:id="@+id/setting_common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_icon="@mipmap/icon_common"
        app:item_left_text="@string/common"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="12dp"
        android:src="@color/gray_light"/>

    <com.admin.app.view.ItemView
        android:id="@+id/setting_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_icon="@mipmap/icon_about"
        app:item_left_text="@string/about"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="12dp"
        android:src="@color/gray_light"/>

    <TextView
        android:id="@+id/setting_exit"
        style="@style/TextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/exit_account"
        android:textColor="@color/red"
        android:textSize="14sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:src="@color/gray_light"/>


</LinearLayout>