<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/category_tabs"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/category_food"
                style="@style/CategoryTab"
                android:checked="true"
                android:text="@string/food"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:contentDescription="@null"
                android:src="@color/gray"/>

            <RadioButton
                android:id="@+id/category_entertainment"
                style="@style/CategoryTab"
                android:text="@string/leisure_and_entertainment"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:contentDescription="@null"
                android:src="@color/gray"/>

            <RadioButton
                android:id="@+id/category_services"
                style="@style/CategoryTab"
                android:text="@string/domestic_services"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:contentDescription="@null"
                android:src="@color/gray"/>

            <RadioButton
                android:id="@+id/category_shopping"
                style="@style/CategoryTab"
                android:text="@string/shopping"/>

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="1px"
                android:contentDescription="@null"
                android:src="@color/gray"/>

            <RadioButton
                android:id="@+id/category_beauty"
                style="@style/CategoryTab"
                android:text="@string/urban_beauty"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:contentDescription="@null"
                android:src="@color/gray"/>

        </RadioGroup>

        <ImageView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@color/gray"/>


        <FrameLayout
            android:id="@+id/category_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@color/white"/>
    </LinearLayout>
</LinearLayout>