<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:layout_marginTop="20dp"
        android:contentDescription="@null"
        android:src="@color/gray_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView"
            android:layout_margin="10dp"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textSize="@dimen/text_subhead"/>

        <com.admin.app.view.EditTextWithDel
            android:id="@+id/login_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/hint_account"
            android:textColor="@color/gray_dark"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_subhead"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:contentDescription="@null"
        android:src="@color/gray_light"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView"
            android:layout_margin="10dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_subhead"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.0"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/gray_dark"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_subhead"/>

        <com.admin.app.view.Switch
            android:id="@+id/login_switch"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:bmHeight="150dp"
            app:bmWidth="60dp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:contentDescription="@null"
        android:src="@color/gray_light"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_gray"
        android:gravity="center"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_subhead"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/login_register"
            style="@style/TextView"
            android:text="@string/register_an_account"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_body"/>

        <TextView
            android:id="@+id/login_forgot"
            style="@style/TextView"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:paddingBottom="5dp"
            android:text="@string/forgot_password"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_body"/>
    </RelativeLayout>
</LinearLayout>