<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>

    <ImageView
        android:id="@+id/register_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        android:src="@mipmap/icon_setting_avatar"/>

    <ImageView style="@style/ImageViewHorizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView"
            android:layout_margin="10dp"
            android:text="@string/account"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_subhead"/>

        <com.admin.app.view.EditTextWithDel
            android:id="@+id/register_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/hint_account"
            android:textColor="@color/gray_dark"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_subhead"/>
    </LinearLayout>

    <ImageView style="@style/ImageViewHorizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView"
            android:layout_margin="10dp"
            android:text="@string/password"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_subhead"/>

        <com.admin.app.view.EditTextWithDel
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/hint_password"
            android:textColor="@color/gray_dark"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_subhead"/>
    </LinearLayout>


    <ImageView style="@style/ImageViewHorizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView"
            android:layout_margin="10dp"
            android:text="@string/confirm_password"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_subhead"/>

        <com.admin.app.view.EditTextWithDel
            android:id="@+id/register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/hint_password"
            android:textColor="@color/gray_dark"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_subhead"/>
    </LinearLayout>


    <ImageView style="@style/ImageViewHorizontal"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_gray"
        android:gravity="center"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_subhead"/>


</LinearLayout>