<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <ImageView
        style="@style/ImageViewHorizontal"
        android:layout_marginTop="12dp" />

    <RelativeLayout
        android:id="@+id/info_btn_avatar"
        android:layout_width="match_parent"
        android:layout_height="72dp">

        <TextView
            style="@style/TextView"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/avatar"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_body" />

        <com.admin.app.view.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/info_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:src="@color/blue"
            app:civ_border_color="@color/gray_light"
            app:civ_border_width="2dp" />
    </RelativeLayout>

    <ImageView style="@style/ImageViewHorizontal" />

    <RelativeLayout
        android:id="@+id/info_btn_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size">

        <TextView
            style="@style/TextView"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/nickname"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_body" />

        <TextView
            android:id="@+id/info_username"
            style="@style/TextView"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:drawableEnd="@mipmap/arrow_right_black"
            android:drawablePadding="5dp"
            android:drawableRight="@mipmap/arrow_right_black"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_body" />

    </RelativeLayout>

    <ImageView style="@style/ImageViewHorizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size">

        <TextView
            style="@style/TextView"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/sex"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_body" />

        <RadioGroup
            android:id="@+id/info_sex"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/info_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/check_selector"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/check_selector"
                android:text="@string/male"
                android:textSize="@dimen/text_body" />

            <RadioButton
                android:id="@+id/info_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:button="@null"
                android:drawableLeft="@drawable/check_selector"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/check_selector"
                android:text="@string/female"
                android:textSize="@dimen/text_body" />
        </RadioGroup>

    </RelativeLayout>

    <ImageView style="@style/ImageViewHorizontal" />

    <RelativeLayout
        android:id="@+id/info_btn_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size">

        <TextView
            style="@style/TextView"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/shipping_address"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_body" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@mipmap/arrow_right_black" />
    </RelativeLayout>

    <ImageView style="@style/ImageViewHorizontal" />

    <TextView
        android:id="@+id/info_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_gray"
        android:gravity="center"
        android:text="@string/save"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_subhead" />
</LinearLayout>